      slightly more accurate.
    * Farmland block tweaked slightly
    * Tweaked ore highlighting to be more noticeable
    * Tweaked coloring for vines, stems, tall grass, and lilypads
    * Explored highlighting will now key off of redstone torches,
      Glowstone, and Jack-O-Lanterns, in addition to regular torches
    * By default, silverfish blocks are highlighted in red.

  * Internal Changes:
    * Added "texfile" entry in block definition YAML, to support mods
      which use an entire new sheet of textures
    * Updated to LWJGL 2.8.0
    * Use log4j for file logging and console error reporting
    * Silverfish block ID changed from STONE_SILVERFISH to SILVERFISH
    * Bundle a third-party texture pack to fall back on if minecraft.jar
      isn't found.  Using "Faithful 32x32" by Vattic currently.
      http://www.minecraftforum.net/topic/72747-
    * More visible notifications when settings in xray.properties get
      overwritten with defaults

Minecraft X-Ray 3.3.3 (2011.09.23)

  * Support for all Beta 1.9-pre1 blocks
  * Various rendering improvements to water, glass, glass panes, iron
    bars, fence gates, crops, and slabs (though transparency issues do
	continue to persist)

Minecraft X-Ray 3.3.2 (2011.09.20)

  * Chests render more correctly now
  * Updated Silverfish block to process its data values correctly
  * Fixed an Exception some Windows users were reporting, when choosing
    "Other" from the world selection dialog

Minecraft X-Ray 3.3.1 (2011.09.14)

  * Updated OS detection to be far more accepting (specifically for
    Windows Server 2008, but should be relatively future-proof now)

Minecraft X-Ray 3.3.0 (2011.09.12)

  * Removed redundant information from world selection dialog
  * Added support for opening arbitrary dimensions (for mods right now,
    will also be needed for the eventual official Sky Dimension).  "N"
    now jumps to the next dimension, "P" jumps to the previous.